Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90018

Crash if background mode is SkyBox but no texture is set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.1
    • 6.0.0
    • Quick: 3D
    • None
    • 2
    • 4af74051028681ed68a90a4cfe75dfcb36a6aff9

      There is as crash when the SceneEnvironment background mode is set to SkyBox, buy no texture is set.

        For Gerrit Dashboard: QTBUG-90018
        # Subject Branch Project Status CR V

            janichol Andy Nichols
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes