Fix crash with SkyBox without texture

Use background color instead in this case.

Task-number: QTBUG-90018
Change-Id: I9a070f6250a8e122ab9780822ac3fd5a9787a450
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>